--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0"
+    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
+    "sass": "^1.77.8",
+    "svelte-fa": "^4.0.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tauri-apps/cli": ">=2.0.0-rc.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
+    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@tauri-apps/cli": ">=2.0.0-rc.0"
+    "vite": "^5.0.3"
   }
 }
